# py_krish_twinkling

./: .gitignore  README.md  pyproject.toml  release.sh  requirements.txt
py_krish_twinkling/: configurations.py  file_reader.py  logger.py  s3_file_system_operations.py
tests/: test_configurations.py  test_file_reader.py  test_get_logger.py
tests/resources/: test_file.txt
