[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py_krish_twinkling"
version = "0.0.3"
description = "Py krish twinkling is the place holder for your common python code"
authors = [ "balakrishnamaduru@gmail.com",]
license = ""
[[tool.poetry.packages]]
include = "py_krish_twinkling"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
test = "pytest"

[tool.pytest.ini_options]
python_files = [ "test_*.py",]
